--- a/app/src/main/res/layout/update_task_dialog.xml
+++ b/app/src/main/res/layout/update_task_dialog.xml
@@ -1,6 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    style="@style/CardViewStyle"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="10dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/white"
+    app:cardElevation="10dp"
+    app:cardPreventCornerOverlap="false"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F6F5F2"
+        android:layout_margin="8dp">
+
+        <TextView
+            android:id="@+id/titleTaskTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/update_the_task"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <ImageView
+
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/closeImg"
+            android:layout_marginVertical="4dp"
+            android:src="@drawable/trash_24"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/delete" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_below="@+id/titleTaskTxt"
+            android:background="@color/black"
+            android:id="@+id/viewHLine"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/viewHLine"
+            android:layout_marginHorizontal="16dp"
+            android:orientation="vertical">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_the_task_title"
+                android:id="@+id/edTaskDescL"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/Widget.AppCompat.TextInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    android:id="@+id/edTaskDesc"
+                    android:background="#F0EBE3"
+                    android:inputType="text"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_task_description"
+                android:background="#F0EBE3"
+                android:id="@+id/edTaskTitleL"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/Widget.AppCompat.TextInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|start"
+                    android:lines="5"
+                    android:maxLines="5"
+                    android:id="@+id/edTaskTitle"
+                    android:inputType="textMultiLine"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/updateTaskBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/update"
+                android:textSize="15sp"
+                android:layout_marginTop="4dp"
+                android:backgroundTint="@color/black"
+                style="@style/Widget.App.Button.Fill"
+                />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</com.google.android.material.card.MaterialCardView>
