--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,6 +36,15 @@
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
+    <style name="SearchInputLayout" parent="">
+        <item name="endIconMode">clear_text</item>
+        <item name="errorIconDrawable">@null</item>
+        <item name="errorEnabled">true</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textCursorDrawable">@color/black</item>
+        <item name="startIconTint">@color/black</item>
+    </style>
+
 
     <style name="Theme.Lab_Exam_04" parent="Base.Theme.Lab_Exam_04" />
 </resources>
