--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Lab_Exam_04" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.TaskApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="fontFamily">@font/open_sans_regular</item>
         <item name="android:statusBarColor">@color/black</item>
     </style>
+
+    <style name="Theme.TaskApp" parent="Base.Theme.TaskApp" />
 
     <style name="CardViewStyle" parent="Widget.Material3.CardView.Filled">
         <item name="shapeAppearanceOverlay">@style/CutShape</item>
     </style>
-
     <style name="CutShape" parent="ShapeAppearance.Material3.MediumComponent">
         <item name="cornerFamily">cut</item>
         <item name="cornerSize">12dp</item>
     </style>
-    
-    <style name="Widget.AppCompat.TextInputLayout" parent="Widget.Material3.TextInputEditText.FilledBox">
+
+    <style name="Widget.App.TextInputLayout" parent="Widget.Material3.TextInputLayout.FilledBox">
         <item name="shapeAppearance">@style/CutShape</item>
         <item name="hintTextColor">@color/black</item>
         <item name="boxStrokeColor">@color/black</item>
@@ -25,15 +28,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textCursorDrawable">@color/black</item>
         <item name="startIconTint">@color/black</item>
-    </style>
-    
-    <style name="Widget.App.Button.Fill" parent="Widget.Material3.Button">
-        <item name="shapeAppearance">@style/CutShape</item>
-    </style>
-
-    <style name="DialogCustomTheme" parent="Theme.Material3.DayNight.Dialog">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
     <style name="SearchInputLayout" parent="">
@@ -45,6 +39,13 @@
         <item name="startIconTint">@color/black</item>
     </style>
 
+    <style name="Widget.App.Button.Fill" parent="Widget.Material3.Button">
+        <item name="shapeAppearance">@style/CutShape</item>
+    </style>
 
-    <style name="Theme.Lab_Exam_04" parent="Base.Theme.Lab_Exam_04" />
+    <style name="DialogCustomTheme" parent="Theme.Material3.DayNight.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+    </style>
+
 </resources>
